# oord-agent

./: Makefile  main.py  pyproject.toml  pytest.ini
.github/workflows/: agent.yml  determinism-agent.yml
_ai/: agent-context-index.md
agent/: receiver.py  sender.py
api/app/models/: seal_manifest.py
cli/: oord_cli.py
docs/: ADR-008-oord-seal-v1.md
gateway/gateway/: Cargo.toml
gateway/gateway/_data/: sessions.db
gateway/gateway/_out/: jwks_snapshot.json  state.json  tl_proof.json
gateway/gateway/src/: config.rs  core_client.rs  csv_writer.rs  lib.rs  main.rs  pipeline.rs  sessions_db.rs  state.rs
gateway/gateway/tests/: config.rs  e2e_lab_demo.sh  lab_demo.test.sh  pipeline.rs  smoke_canon.sh  test_pack_identity.rs  transparency_smoke.rs
scripts/: ctx.sh
tests/agent/: test_agent_entrypoint.py  test_sender_receiver_discovery.py
tests/cli/: test_oord_cli.py
tests/determinism/: test_bundle_determinism.py
tests/fixtures/determinism/input/: a.txt
tests/fixtures/determinism/input/subdir/: b.txt
tests/schemas/: manifest_v1.json  proof_v1.json
tests/utils/: test_merkle_engine.py  test_seal_contracts.py  test_verify_bundle_cli.py
utils/: bundle_packer.py  verify_bundle.py
