[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
regex = "1"
thiserror = "1"
dirs = "5"
walkdir = "2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
notify = "6"
zip = { version = "6.0.0", features = ["deflate"] }
sha2 = "0.10"
rusqlite = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"

[lib]
name = "gateway"
path = "src/lib.rs"
